# qtm-geoservices-win7

./: CMakeLists.txt  README  qtm-position-win7.pro
example/: clientapplication.cpp  clientapplication.h  example.pro  main.cpp
plugin/: CMakeLists.txt  plugin.pro  qgeolocationevents_win7.cpp  qgeolocationevents_win7_p.h  qgeopositioninfosource_win7.cpp  qgeopositioninfosource_win7.h  qgeopositioninfosourcefactory_win7.cpp  qgeopositioninfosourcefactory_win7.h
